include/dsspm_capi.h

    
    DSSPM_CAPI_DLL void CtrlQueue_ClearQueue(void);
    
    DSSPM_CAPI_DLL void CtrlQueue_Delete(int32_t ActionHandle);
    
    /*
    Code for the active action. Long integer code to tell the control device what to do
    */
    DSSPM_CAPI_DLL int32_t CtrlQueue_Get_ActionCode(void);
    
    /*
    Handle (User defined) to device that must act on the pending action.
    */
    DSSPM_CAPI_DLL int32_t CtrlQueue_Get_DeviceHandle(void);
    
    /*
    Number of Actions on the current actionlist (that have been popped off the control queue by CheckControlActions)
    */
    DSSPM_CAPI_DLL int32_t CtrlQueue_Get_NumActions(void);
    
    DSSPM_CAPI_DLL void CtrlQueue_Show(void);
    
    DSSPM_CAPI_DLL void CtrlQueue_ClearActions(void);
    
    /*
    Pops next action off the action list and makes it the active action. Returns zero if none.
    */
    DSSPM_CAPI_DLL int32_t CtrlQueue_Get_PopAction(void);
    
    /*
    Set the active action by index
    */
    DSSPM_CAPI_DLL void CtrlQueue_Set_Action(int32_t Param1);
    
    /*
    Number of items on the OpenDSS control Queue
    */
    DSSPM_CAPI_DLL int32_t CtrlQueue_Get_QueueSize(void);
    
    DSSPM_CAPI_DLL void CtrlQueue_DoAllQueue(void);
    
    /*
    Array of strings containing the entire queue in CSV format
    */
    DSSPM_CAPI_DLL void CtrlQueue_Get_Queue(char*** ResultPtr, int32_t* ResultCount);